k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-saas-ingress
  namespace: ai-saas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ai-saas.local
    http:
      paths:
      - path: /yolo
        pathType: Prefix
        backend:
          service:
            name: yolo
            port:
              number: 8000
      - path: /mlflow
        pathType: Prefix
        backend:
          service:
            name: mlflow
            port:
              number: 8001
